k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pix-api
  labels:
    app: pix-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pix-api
  template:
    metadata:
      labels:
        app: pix-api
    spec:
      containers:
      - name: pix-api
        image: cbmdevacr.azurecr.io/play-express
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3003
      imagePullSecrets:
      - name: cbmdevacr-secret
