k8s/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pix-api
  labels:
    app: pix-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pix-api
  template:
    metadata:
      labels:
        app: pix-api
    spec:
      containers:
      - name: pix-api
        image: cbmdevacr.azurecr.io/play-express:latest
        ports:
        - containerPort: 3003
      imagePullSecrets:
      - name: cbmdevacr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: pix-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3003
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pix-api-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-auto
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - pix-api.alphaem-dev.com
    secretName: tls-secret
  rules:
  - host: pix-api.alphaem-dev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pix-api
          servicePort: 80
