k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pix-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3003
    targetPort: 3003
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pix-api-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-auto
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - pix-api.alphaem-dev.com
    secretName: tls-secret
  rules:
  - host: pix-api.alphaem-dev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pix-api
          servicePort: 3003
